# lox_interpreter_cpp

./: CMakeLists.txt  README.md  vcpkg-configuration.json
.cache/clangd/index/: BinaryExpression.h.0703F00E04F02408.idx  GroupingExpression.h.8EFA350B88D12275.idx  LiteralExpression.h.0FDE500DD530A605.idx  UnaryExpression.h.E27DF3F5FDB125BA.idx  arithmetic_visitor.cpp.B164617F4C75AE32.idx  core.cpp.B6EE819E3DED1D51.idx  core.h.FE0D29E2843CF18A.idx  expression.h.6D5A2301133A8A50.idx  expression_visitor.cpp.9B42DBD2278EFC35.idx  expression_visitor.h.E5EAC7A185148D53.idx  helper.cpp.604FB3741EE2EE6A.idx  helper.h.B4F4D940B7EDB924.idx  input.cpp.BC427BAD5F26EB4D.idx  input.h.6B8978A73E334CD5.idx  lox.cpp.2D343D17F068923E.idx  parser.cpp.595395CEDA225980.idx  parser.h.200EA505D949775E.idx  print_visitor.cpp.371D67E48A7D8DF1.idx  print_visitor.h.1DA3D4263A55C66B.idx  scanner.cpp.E6CFA84C559F90FC.idx  scanner.h.4481CF1CFC6D3E34.idx  shell.cpp.4FE0C7FB1522E4B9.idx  token.cpp.D3649F59239CB8BF.idx  token.h.B2094E697D86FA5B.idx
include/core/: core.h
include/expression/: AssignExpression.h  BinaryExpression.h  CallExpression.h  GetAttributeExpression.h  GroupingExpression.h  LiteralExpression.h  LogicalExpression.h  SetAttributeExpression.h  ThisExpression.h  UnaryExpression.h  VariableExpression.h  expression.h  expression_headers.h  test_for_generator_script.h
include/expression/expression_visitor/: arithmetic_visitor.h  expression_visitor.h  print_visitor.h
include/function/: LoxBuiltIn.h  loxBuiltIn.h
include/helper/: helper.h
include/input/: input.h
include/interpreter/: environment.h  interpreter.h
include/parser/: parser.h
include/resolver/: resolver.h
include/scanner/: scanner.h
include/statement/: BlockStatement.h  ClassStatement.h  ExpressionStatement.h  FunctionStatement.h  IfStatement.h  PrintStatement.h  ReturnStatement.h  VarStatement.h  VariableStatement.h  WhileStatement.h  statement.h  statement_headers.h
include/statement/statement_visitor/: statement_visitor.h
include/symbol/: box.h  token.h  types.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp
src/driver/: CMakeLists.txt  driver.cpp
src/expression/: CMakeLists.txt  arithmetic_visitor.cpp  print_visitor.cpp
src/function/: CMakeLists.txt  LoxBuiltIn.cpp  loxBuiltIn.cpp
src/helper/: CMakeLists.txt  helper.cpp
src/input/: CMakeLists.txt  input.cpp
src/interpreter/: CMakeLists.txt  environment.cpp  interpreter.cpp
src/parser/: CMakeLists.txt  parser.cpp
src/resolver/: CMakeLists.txt  resolver.cpp
src/scanner/: CMakeLists.txt  scanner.cpp
src/symbol/: CMakeLists.txt  token.cpp  types.cpp
src/visitor/: CMakeLists.txt  arithmetic_visitor.cpp  print_visitor.cpp
test/test_file/: class1  class2  class3  class4  clock  for_loop1  function1  function2  function3  function4  function5  function6  if_statement1  print1  scope1  test1  while_loop1
toolchain/: clang.cmake
tools/: CMakeLists.txt  lox.cpp
tools/generator/: CMakeLists.txt  expression  generate_ast.py  grammer  statement
triplet/: x64-linux-clang.cmake
